# pycoris

./: .gitignore  LICENSE  Makefile  README.md  babel.cfg  pyproject.toml
pycoris/: base.py  dev_templates.py  settings.py
pycoris/interface/high/: base.py  menu.py
pycoris/interface/low/: base.py  html.py  icons.py
pycoris/interface/low/tabler/: badges.py  buttons.py  colors.py  dividers.py  dropdowns.py  navbar.py  typography.py
pycoris/orms/: base.py
pycoris/orms/tortoise/: __init__.py  admin.py
pycoris/static/js/: base-theme.js
pycoris/templates/: base.html
pycoris/templates/components/: icons.html  macros.html
pycoris/templates/layouts/: horizontal.html
pycoris/templates/layouts/components/nav/: account.html  actions.html  full.html  notifications.html
