[tool.poetry]
name = "pycoris"
version = "0.1.0.dev1"
description = ""
authors = ["BiqRed <biqred.shine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = {version = "^0.20.1", optional = true}
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
uvicorn = {version = "^0.29.0", optional = true}
babel = "^2.15.0"
aiofiles = "^23.2.1"
fastapi-babel = "^0.0.9"
typing-extensions = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
